
-------------------------------------------------------------------------------

Mon Aug 23 16:17:33 PDT 1999
(Raster)

menus stay onscreen with menusonscreen on top and left sides now. :) also side
ways starup screen patch in :)

-------------------------------------------------------------------------------

Mon Aug 30 17:04:20 PDT 1999
(Mandrake)

removed config.h
a little more KDE stuff - have to merge with stuff at home and commit again.

-------------------------------------------------------------------------------

Tue Aug 31 17:31:58 PDT 1999
(Mandrake)

some more KDE stuff.

-------------------------------------------------------------------------------

Wed Sep  1 13:48:38 PDT 1999
(Mandrake)

applied patch from Graham A. MacDonald <graham@34southpark.freeserve.co.uk>
that fixes a groups segfault

-------------------------------------------------------------------------------

Wed Sep  1 14:32:11 PDT 1999
(Mandrake)

New ecvs script.  this one automatically builds a changelog for us.
rewrote the whole thing in perl.  some things you'll notice at the top, easy
ways for you to change what your (Mandrake) message in ChangeLog shows up as,
as well as an easy entry point for you to add your own indent style
(see %names and %indents hashes)


-------------------------------------------------------------------------------

Wed Sep  1 14:40:22 PDT 1999
(Mandrake)

a couple of minor bugfixes to ecvs.  now it removes the tempfile CommitLog
as well as remembers to display the cvs commit as it happens.

-------------------------------------------------------------------------------

Wed Sep  1 16:09:21 PDT 1999
(Raster)


-------------------------------------------------------------------------------

Wed Sep  1 16:09:47 PDT 1999
(Raster)


-------------------------------------------------------------------------------

Wed Sep  1 16:10:02 PDT 1999
(Raster)

ok - errant use of the scritp.. this needs to be fixed.. :)